Thay the toan bo template bang ban 7.0 chinh thuc de dong bo build script